// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalog POT Flow Should get translations from template if locale file not presented 1`] = `
Object {
  2ZeN02: Test String,
  mY42CM: Hello World,
}
`;

exports[`Catalog collect should extract messages from source files 1`] = `
Object {
  Component A: Object {
    context: undefined,
    extractedComments: Array [],
    message: undefined,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        1,
      ],
    ],
  },
  Component B: Object {
    context: undefined,
    extractedComments: Array [],
    message: undefined,
    origin: Array [
      Array [
        collect/componentB.js,
        1,
      ],
    ],
  },
  Hello World: Object {
    context: undefined,
    extractedComments: Array [
      Comment A,
      Comment A again,
      Hello comment,
    ],
    message: undefined,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        2,
      ],
      Array [
        collect/componentA/componentA.js,
        3,
      ],
      Array [
        collect/componentA/index.js,
        1,
      ],
    ],
  },
  custom.id: Object {
    context: undefined,
    extractedComments: Array [],
    message: Message with id,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        4,
      ],
    ],
  },
}
`;

exports[`Catalog collect should extract only files passed on options 1`] = `
Object {
  Component A: Object {
    context: undefined,
    extractedComments: Array [],
    message: undefined,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        1,
      ],
    ],
  },
  Hello World: Object {
    context: undefined,
    extractedComments: Array [
      Comment A,
      Comment A again,
      Hello comment,
    ],
    message: undefined,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        2,
      ],
      Array [
        collect/componentA/componentA.js,
        3,
      ],
      Array [
        collect/componentA/index.js,
        1,
      ],
    ],
  },
  custom.id: Object {
    context: undefined,
    extractedComments: Array [],
    message: Message with id,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        4,
      ],
    ],
  },
}
`;

exports[`Catalog collect should support Flow syntax if enabled 1`] = `Object {}`;

exports[`Catalog collect should support JSX and Typescript 1`] = `
Object {
  ID Some: Object {
    context: undefined,
    extractedComments: Array [],
    message: Message with id some,
    origin: Array [
      Array [
        collect-typescript-jsx/macro.tsx,
        11,
      ],
    ],
  },
  MHrjPM: Object {
    context: undefined,
    extractedComments: Array [],
    message: Title,
    origin: Array [
      Array [
        collect-typescript-jsx/macro.tsx,
        19,
      ],
    ],
  },
  Nu4oKW: Object {
    context: undefined,
    extractedComments: Array [
      description,
    ],
    message: Description,
    origin: Array [
      Array [
        collect-typescript-jsx/macro.tsx,
        6,
      ],
    ],
  },
  YikuIL: Object {
    context: Context1,
    extractedComments: Array [],
    message: Some message,
    origin: Array [
      Array [
        collect-typescript-jsx/macro.tsx,
        18,
      ],
    ],
  },
  d1Kdl3: Object {
    context: undefined,
    extractedComments: Array [],
    message: Hi, my name is {name},
    origin: Array [
      Array [
        collect-typescript-jsx/macro.tsx,
        17,
      ],
    ],
  },
  esnaQO: Object {
    context: undefined,
    extractedComments: Array [],
    message: {count, plural, one {# book} other {# books}},
    origin: Array [
      Array [
        collect-typescript-jsx/macro.tsx,
        21,
      ],
    ],
  },
  xDAtGP: Object {
    context: undefined,
    extractedComments: Array [],
    message: Message,
    origin: Array [
      Array [
        collect-typescript-jsx/macro.tsx,
        4,
      ],
    ],
  },
}
`;

exports[`Catalog make should collect and write catalogs 1`] = `
Object {
  cs: null,
  en: null,
}
`;

exports[`Catalog make should collect and write catalogs 2`] = `
Object {
  cs: Object {
    Component A: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
      ],
      translation: ,
    },
    Hello World: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [
        Comment A,
        Comment A again,
        Hello comment,
      ],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          2,
        ],
        Array [
          collect/componentA/componentA.js,
          3,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: ,
    },
    custom.id: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          4,
        ],
      ],
      translation: ,
    },
  },
  en: Object {
    Component A: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
      ],
      translation: ,
    },
    Hello World: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [
        Comment A,
        Comment A again,
        Hello comment,
      ],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          2,
        ],
        Array [
          collect/componentA/componentA.js,
          3,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: ,
    },
    custom.id: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          4,
        ],
      ],
      translation: ,
    },
  },
}
`;

exports[`Catalog make should merge with existing catalogs 1`] = `
Object {
  cs: Object {
    mY42CM: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [],
      message: Hello World,
      obsolete: false,
      origin: Array [],
      translation: Ahoj Brno,
    },
  },
  en: Object {
    mY42CM: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [],
      message: Hello World,
      obsolete: false,
      origin: Array [],
      translation: Ahoj Brno,
    },
  },
}
`;

exports[`Catalog make should merge with existing catalogs 2`] = `
Object {
  cs: Object {
    Component A: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
      ],
      translation: ,
    },
    Component B: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentB.js,
          1,
        ],
      ],
      translation: ,
    },
    Hello World: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [
        Comment A,
        Comment A again,
        Hello comment,
      ],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          2,
        ],
        Array [
          collect/componentA/componentA.js,
          3,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: ,
    },
    custom.id: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          4,
        ],
      ],
      translation: ,
    },
    mY42CM: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [
        js-lingui-id: mY42CM,
      ],
      flags: Array [],
      message: Hello World,
      obsolete: true,
      origin: Array [],
      translation: Ahoj Brno,
    },
  },
  en: Object {
    Component A: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
      ],
      translation: ,
    },
    Component B: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentB.js,
          1,
        ],
      ],
      translation: ,
    },
    Hello World: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [
        Comment A,
        Comment A again,
        Hello comment,
      ],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          2,
        ],
        Array [
          collect/componentA/componentA.js,
          3,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: ,
    },
    custom.id: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          4,
        ],
      ],
      translation: ,
    },
    mY42CM: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [
        js-lingui-id: mY42CM,
      ],
      flags: Array [],
      message: Hello World,
      obsolete: true,
      origin: Array [],
      translation: Ahoj Brno,
    },
  },
}
`;

exports[`Catalog make should only update the specified locale 1`] = `
Object {
  cs: null,
  en: null,
}
`;

exports[`Catalog make should only update the specified locale 2`] = `
Object {
  cs: null,
  en: Object {
    Component A: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          1,
        ],
      ],
      translation: ,
    },
    Hello World: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [
        Comment A,
        Comment A again,
        Hello comment,
      ],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          2,
        ],
        Array [
          collect/componentA/componentA.js,
          3,
        ],
        Array [
          collect/componentA/index.js,
          1,
        ],
      ],
      translation: ,
    },
    custom.id: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [
        explicit-id,
      ],
      obsolete: false,
      origin: Array [
        Array [
          collect/componentA/componentA.js,
          4,
        ],
      ],
      translation: ,
    },
  },
}
`;

exports[`Catalog makeTemplate should collect and write a template 1`] = `null`;

exports[`Catalog makeTemplate should collect and write a template 2`] = `
Object {
  Component A: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        1,
      ],
    ],
    translation: ,
  },
  Hello World: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [
      Comment A,
      Comment A again,
      Hello comment,
    ],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        2,
      ],
      Array [
        collect/componentA/componentA.js,
        3,
      ],
      Array [
        collect/componentA/index.js,
        1,
      ],
    ],
    translation: ,
  },
  custom.id: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [
      Array [
        collect/componentA/componentA.js,
        4,
      ],
    ],
    translation: ,
  },
}
`;

exports[`Catalog read should read file in given format 1`] = `
Object {
  obsolete: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [],
    flags: Array [
      explicit-id,
    ],
    obsolete: true,
    origin: Array [],
    translation: Is marked as obsolete,
  },
  static: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [],
    translation: Static message,
  },
  veryLongString: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [],
    translation: One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me?" he thought. It wasn't a dream. His room, a proper human,
  },
  withComments: Object {
    comments: Array [
      Translator comment,
      This one might come from developer,
    ],
    context: null,
    extractedComments: Array [],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [],
    translation: Support translator comments separately,
  },
  withDescription: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [
      Description is comment from developers to translators,
    ],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [],
    translation: Message with description,
  },
  withFlags: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [],
    flags: Array [
      fuzzy,
      otherFlag,
      explicit-id,
    ],
    obsolete: false,
    origin: Array [],
    translation: Keeps any flags that are defined,
  },
  withMultipleOrigins: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [
      Array [
        src/App.js,
        4,
      ],
      Array [
        src/Component.js,
        2,
      ],
    ],
    translation: Message with multiple origin,
  },
  withOrigin: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [],
    flags: Array [
      explicit-id,
    ],
    obsolete: false,
    origin: Array [
      Array [
        src/App.js,
        4,
      ],
    ],
    translation: Message with origin,
  },
  xC8QeX: Object {
    comments: Array [],
    context: null,
    extractedComments: Array [
      js-lingui-id: pXy+hm,
    ],
    flags: Array [],
    message: Message with default hash id,
    obsolete: false,
    origin: Array [],
    translation: Translation for: Message with default-hash id,
  },
}
`;

exports[`Catalog read should read file in previous format 1`] = `null`;

exports[`Catalog readAll should read existing catalogs for all locales 1`] = `
Object {
  cs: Object {
    mY42CM: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [],
      message: Hello World,
      obsolete: false,
      origin: Array [],
      translation: Ahoj Brno,
    },
  },
  en: Object {
    mY42CM: Object {
      comments: Array [],
      context: null,
      extractedComments: Array [],
      flags: Array [],
      message: Hello World,
      obsolete: false,
      origin: Array [],
      translation: Hello World,
    },
  },
}
`;

exports[`Catalog should convert catalog format 1`] = `
msgid ""
msgstr ""
"Project-Id-Version: \\n"
"Report-Msgid-Bugs-To: \\n"
"POT-Creation-Date: \\n"
"PO-Revision-Date: \\n"
"Last-Translator: \\n"
"Language: \\n"
"Language-Team: \\n"
"Content-Type: \\n"
"Content-Transfer-Encoding: \\n"
"Plural-Forms: \\n"

msgid "static"
msgstr "Static message"

msgid "veryLongString"
msgstr "One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. \\"What's happened to me?\\" he thought. It wasn't a dream. His room, a proper human"
`;

exports[`cleanObsolete should remove obsolete messages from catalog 1`] = `
Object {
  Label: Object {
    obsolete: false,
    origin: Array [
      Array [
        catalog.test.ts,
        1,
      ],
    ],
    translation: Label,
  },
}
`;

exports[`order should order messages alphabetically 1`] = `
Object {
  LabelA: Object {
    obsolete: false,
    origin: Array [
      Array [
        catalog.test.ts,
        1,
      ],
    ],
    translation: A,
  },
  LabelB: Object {
    obsolete: false,
    origin: Array [
      Array [
        catalog.test.ts,
        1,
      ],
    ],
    translation: B,
  },
  LabelC: Object {
    obsolete: false,
    origin: Array [
      Array [
        catalog.test.ts,
        1,
      ],
    ],
    translation: C,
  },
  LabelD: Object {
    obsolete: false,
    origin: Array [
      Array [
        catalog.test.ts,
        1,
      ],
    ],
    translation: D,
  },
}
`;

exports[`order should order messages alphabetically 2`] = `
Array [
  LabelA,
  LabelB,
  LabelC,
  LabelD,
]
`;

exports[`order should order messages by origin 1`] = `
Object {
  LabelA: Object {
    obsolete: false,
    origin: Array [
      Array [
        file2.js,
        3,
      ],
    ],
    translation: A,
  },
  LabelB: Object {
    obsolete: false,
    origin: Array [
      Array [
        file1.js,
        2,
      ],
      Array [
        file2.js,
        2,
      ],
    ],
    translation: B,
  },
  LabelC: Object {
    obsolete: false,
    origin: Array [
      Array [
        file1.js,
        1,
      ],
    ],
    translation: C,
  },
  LabelD: Object {
    obsolete: false,
    origin: Array [
      Array [
        file2.js,
        100,
      ],
    ],
    translation: D,
  },
}
`;

exports[`order should order messages by origin 2`] = `
Array [
  LabelC,
  LabelB,
  LabelA,
  LabelD,
]
`;
